--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,8 +10,12 @@
 name: OpenWrt-CI
 
 on:
-  schedule:
-    - cron: 0 20 * * *
+  watch:
+    [started]
+  #push:
+   # branches: release
+  #schedule:
+   # - cron: 0 20 * * *
 
 jobs:
 
